# tv-time

./: README.md  index.html  package-lock.json  package.json  reset_db.py  s.txt  tailwind.config.js  vite.config.ts
database/: tv-time-clone.db  user-profile.json
src/: App.vue  ListsPage.vue
src-tauri/: Cargo.toml  generate-icons.ps1  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/tv-time-clone-data/: tv-time-clone.db  tv-time-clone.db-journal
src/router/: index.ts
